<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/searchEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/search_hint"
      android:imeOptions="actionSearch"
      android:importantForAutofill="no"
      android:inputType="text"
      android:maxLines="1"
      android:singleLine="true"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/toDetailsActivityButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin"
      android:text="@string/to_details"
      app:layout_constraintTop_toBottomOf="@id/searchEditText" />


  <TextView
      android:id="@+id/totalCountTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/results_count"
      android:visibility="invisible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toDetailsActivityButton"
      tools:text="Number of results: 100" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintTop_toBottomOf="@id/toDetailsActivityButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
