<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin">

  <Button
      android:id="@+id/decrementButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/decrement_text"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/totalCountTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/results_count"
      app:layout_constraintBottom_toBottomOf="@+id/decrementButton"
      app:layout_constraintStart_toEndOf="@+id/decrementButton"
      app:layout_constraintTop_toTopOf="@+id/decrementButton"
      tools:text="Number of results: 100" />

  <Button
      android:id="@+id/incrementButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/increment_text"
      app:layout_constraintBottom_toBottomOf="@+id/decrementButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/decrementButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
